kubernetes/apps/network/internal/remote-services/services/fireflyiii.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-fireflyiii
  namespace: network
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
      name: http
  type: ExternalName
  externalName: zeus.nas.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-fireflyiii
  namespace: network
  annotations:
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "fireflyiii"
    gethomepage.dev/description: "Personal Finance Manager"
    gethomepage.dev/href: "https://bills.${SECRET_DOMAIN}"
    gethomepage.dev/group: "Office"
    gethomepage.dev/icon: https://raw.githubusercontent.com/MattFaz/unraid_templates/main/images/fireflyiii-logo.png
    gethomepage.dev/siteMonitor: http://zeus.nas.internal:8083
spec:
  ingressClassName: internal
  rules:
    - host: "bills.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: remote-internal-fireflyiii
              port:
                number: 8083
  tls:
    - hosts:
        - "bills.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
